<resources>

    <!--The title of the app-->
    <string name="app_name">Stock Hawk</string>

    <!--Menu button to access settings-->
    <string name="action_settings">Settings</string>

    <!--Menu button to change stock units-->
    <string name="action_change_units">Change Units</string>

    <!--Dialog title for searching a stock symbol-->
    <string name="symbol_search">Symbol Search</string>

    <!--Dialog content text-->
    <string name="content_search">Search for a Stock Symbol</string>

    <!--Dialog input hint text-->
    <string name="input_hint">Stock symbol</string>

    <!--Dialog input prefill text-->
    <string name="input_prefill"></string>

    <!--No Internet connection message-->
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="network_snackbar">No network, data may not be up to date.</string>

    <!--Button description for adding a stock to the watch list-->
    <string name="add_stock">Add Stock to watch list</string>

    <!--Message when adding an existing stock-->
    <string name="stock_exists">This stock is already saved.</string>

    <!--Button labels to select date range-->
    <string name="days5">5D</string>
    <string name="months3">3M</string>
    <string name="months6">6M</string>
    <string name="years1">1Y</string>
    <string name="years5">5Y</string>
    <string name="max">MAX</string>

    <!--Toast message for invalid stock-->
    <string name="invalid_stock">Invalid stock.</string>

    <!--Stock data empty message-->
    <string name="empty_stock_data">No Stock Information Available.</string>

    <!--Start and cancel alarm to refresh the widget-->
    <string name="start_alarm">Start alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>

    <!--Refresh data-->
    <string name="refresh_data">Refresh</string>

    <!--Show the time data was updated-->
    <string name="time_updated">Updated&#160;</string>

    <!--Enter a stock symbol-->
    <string name="stock_hint">Stock Symbol</string>

    <!--Positive button to add a stock-->
    <string name="add_stock_button">Add</string>

    <!--Negative button when canceling adding a stock-->
    <string name="cancel_stock_button">Cancel</string>

</resources>
