<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MyStocksActivity">
    <item
        android:id="@+id/action_change_units"
        android:icon="@drawable/ic_attach_money_white_24dp"
        android:title="@string/action_change_units"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/refresh_data"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/refresh_data"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/start_alarm"
        android:title="@string/start_alarm"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cancel_alarm"
        android:title="@string/cancel_alarm"
        app:showAsAction="never"/>
</menu>
