<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stock_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sam_chordas.android.stockhawk.ui.StockDetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stock_symbol"
            style="@style/StockSymbolTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"/>

        <com.db.chart.view.LineChartView
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal">

            <Button
                android:id="@+id/days5"
                style="?android:attr/buttonBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/days5"/>

            <Button
                android:id="@+id/months3"
                style="?android:attr/buttonBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/months3"/>

            <Button
                android:id="@+id/months6"
                style="?android:attr/buttonBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/months6"/>

            <Button
                android:id="@+id/years1"
                style="?android:attr/buttonBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/years1"/>

            <Button
                android:id="@+id/years5"
                style="?android:attr/buttonBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/years5"/>

            <Button
                android:id="@+id/max"
                style="?android:attr/buttonBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/max"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
